try to prevent zoom on mobile

--- a/src/tabs/SVGDLA/line-length-controls/line-length-controls.css
+++ b/src/tabs/SVGDLA/line-length-controls/line-length-controls.css
@@ -26,6 +26,7 @@
     margin-left: 0;
     width: 100%;
     max-width: 200px;
+    font-size: 16px; /* Prevent zoom on mobile */
   }
   
   .svgdla-radius-row {
@@ -38,6 +39,7 @@
     margin-left: 0;
     width: 100%;
     max-width: 200px;
+    font-size: 16px; /* Prevent zoom on mobile */
   }
 }
 
