--- a/src/tabs/SVGDLA/square-size-controls/square-size-controls.css
+++ b/src/tabs/SVGDLA/square-size-controls/square-size-controls.css
@@ -25,6 +25,7 @@
     margin-left: 0;
     width: 100%;
     max-width: 200px;
+    font-size: 16px; /* Prevent zoom on mobile */
   }
 }
 
